--- a/src/app/home/views/dashboard/dashboard.component.html
+++ b/src/app/home/views/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="container row pt-4">
+<div class="container row pt-4 contentstyle">
     <app-sidebar class="col-4"></app-sidebar>
     <div class="col-8">
       <app-table-items></app-table-items>
