--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
 <div class="list-group">
-    <app-list-item path="/" nameBtn="Show Persons"></app-list-item>
-    <app-list-item path="createperson" nameBtn="Create Person"></app-list-item>
+    <app-list-item path="/" nameBtn="Mostrar personas"></app-list-item>
+    <app-list-item path="createperson" nameBtn="Crear pesona"></app-list-item>
 </div>
