--- a/src/app/home/components/table-items/table-items.component.html
+++ b/src/app/home/components/table-items/table-items.component.html
@@ -1,45 +1,22 @@
-<table class="table">
+<table class="table text-center">
     <thead>
       <tr>
-        <th scope="col">#</th>
-        <th scope="col">Name</th>
-        <th scope="col">Pets</th>
-        <th scope="col">Edit</th>
-        <th scope="col">Delete</th>
+        <th scope="col">Numero de documento</th>
+        <th scope="col">Nombre</th>
+        <th scope="col">Mascotas</th>
+        <th scope="col">Eliminar</th>
       </tr>
     </thead>
     <tbody>
-      <tr>
-        <th scope="row">1</th>
-        <td>Mark</td>
-        <td>Tutu</td>
+      <tr *ngFor="let person of persons">
+        <th scope="row">{{ person.numberDocument | number }}</th>
+        <td>{{ person.name | titlecase }}</td>
         <td>
-            <button class="btn bg-warning text-white" [routerLink]="['/updateperson', '1']">Edit</button>
+          <span *ngFor="let pet of person.pets"> | {{ pet.name }} | </span>
         </td>
         <td>
-            <button class="btn bg-danger text-white">Delete</button>
-        </td>
-      </tr>
-      <tr>
-        <th scope="row">2</th>
-        <td>Mark</td>
-        <td>Tutu</td>
-        <td>
-            <button class="btn bg-warning text-white" [routerLink]="['/updateperson', '2']">Edit</button>
-        </td>
-        <td>
-            <button class="btn bg-danger text-white">Delete</button>
+            <button class="btn bg-danger text-white" (click)="deletePerson(person._id)">Delete</button>
         </td>
       </tr>
-      <tr>
-        <th scope="row">3</th>
-        <td>Mark</td>
-        <td>Tutu</td>
-        <td>
-            <button class="btn bg-warning text-white" [routerLink]="['/updateperson', '3']">Edit</button>
-        </td>
-        <td>
-            <button class="btn bg-danger text-white">Delete</button>
-        </td>
     </tbody>
   </table>
