--- a/src/app/home/views/update-person/update-person.component.html
+++ b/src/app/home/views/update-person/update-person.component.html
@@ -1,6 +1,6 @@
 <div class="container row pt-4">
     <app-sidebar class="col-4"></app-sidebar>
     <div class="col-8">
-        <app-form-person btnValue="update"></app-form-person>
+        <app-form-person></app-form-person>
     </div>
 </div>
