--- a/src/app/home/views/update-person/update-person.component.html
+++ b/src/app/home/views/update-person/update-person.component.html
@@ -1,6 +1,10 @@
+<ng-container *ngIf="showModal">
+    <app-modal-pet (closeModalEmitter)="toggleModal($event)" class="position-absolute zindex9"></app-modal-pet>
+  </ng-container>
+
 <div class="container row pt-4">
     <app-sidebar class="col-4"></app-sidebar>
     <div class="col-8">
-        <app-form-person></app-form-person>
+        <app-form-person mode="update" (showModalEmitter)="toggleModal($event)"></app-form-person>
     </div>
 </div>
