--- a/src/app/home/components/form-person/form-person.component.html
+++ b/src/app/home/components/form-person/form-person.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="formPerson">
+<form [formGroup]="formPerson" (ngSubmit)="submitPerson()">
     <div class="mb-3">
         <label for="numberDocument" class="form-label">Numero de documento</label>
         <input type="number" class="form-control" id="numberDocument" aria-describedby="emailHelp" formControlName='numberDocument'>
@@ -8,30 +8,30 @@
         <input type="text" class="form-control" id="namePerson" aria-describedby="emailHelp" formControlName='name'>
     </div>
 
-    <form [formGroup]="formSearchPet" (ngSubmit)="createNewPerson()" class="mb-3">
-        <label for="exampleInputEmail1" class="form-label">Buscar Mascota</label>
+    <div class="mb-3">
+        <label for="searchPet" class="form-label">Buscar Mascota</label>
         <div class="d-flex justify-content-between">
             <div class="d-flex position-relative w-75">
-                <input autocomplete="off" type="text" class="form-control w-100" id="exampleInputEmail1" aria-describedby="emailHelp" formControlName='term'  (keyup)="searchByterm()"> 
-                <div *ngIf="formSearchPet.value.term?.length >= 1" class="tableheight-show position-absolute positionbottom bg-white p-1 w-100">
+                <input autocomplete="off" type="text" class="form-control w-100" id="searchPet" aria-describedby="pet" formControlName='term'  (keyup)="searchByterm()"> 
+                <div *ngIf="formPerson.value.term?.length >= 1" class="tableheight-show position-absolute positionbottom bg-white p-1 w-100">
                     <div class="list-group">
                         <button 
                           type="button" 
                           class="list-group-item list-group-item-action" 
-                          *ngFor="let pet of pets"
+                          *ngFor="let pet of resultsPetsFindByTerm"
                           (click)="agregatePet(pet)"
-                        >M1234 - {{ pet.name | titlecase }} - {{ pet.type | titlecase }}</button>
+                        >{{ pet.matricule }} - {{ pet.name | titlecase }} - {{ pet.type | titlecase }}</button>
                         <button
-                          *ngIf="pets.length <= 0"
+                          *ngIf="resultsPetsFindByTerm.length <= 0"
                           type="button" 
                           class="list-group-item list-group-item-action">
-                          No se han conseguido resultados para {{ formSearchPet.value.term }}
+                          No se han conseguido resultados para {{ formPerson.value.term }}
                         </button>
                       </div>
                 </div>
             </div>
             <div class="d-flex justify-content-end">
-                <button class="btn bg-success text-white" (click)="viewModal()">Crear Mascota</button>
+                <button type="button" class="btn bg-success text-white" (click)="viewModal()">Crear Mascota</button>
             </div>
         </div>
         <div class="tableheight mt-4">
@@ -60,6 +60,6 @@
           <div *ngIf="isErrorFromNumberDOcument" class="text-center">
             <strong class="text-danger">Error Numero de Documento Ya esta registrado</strong>
           </div>
-          <button type="submit" class="btn btn-success w-100 mt-3" [disabled]="!formPerson.valid || petsAgregate.length <= 0">Crear Persona</button>
-    </form>
+          <button type="submit" class="btn btn-success w-100 mt-3" [disabled]="!formPerson.valid || petsAgregate.length < 0">{{ mode === 'create' ? 'Crear' : 'Actualizar'  }}</button>
+    </div>
 </form>
