--- a/src/app/home/views/create-person/create-person.component.html
+++ b/src/app/home/views/create-person/create-person.component.html
@@ -1,4 +1,3 @@
-<!--<ng-content #name></ng-content>-->
 <ng-container *ngIf="showModal">
   <app-modal-pet (closeModalEmitter)="toggleModal($event)" class="position-absolute zindex9"></app-modal-pet>
 </ng-container>
@@ -6,7 +5,6 @@
 <div class="container row pt-4 contentstyle">
     <app-sidebar class="col-4"></app-sidebar>
     <div class="col-8">
-        <app-form-person (showModalEmitter)="toggleModal($event)"></app-form-person>
-        
+        <app-form-person mode="create" (showModalEmitter)="toggleModal($event)"></app-form-person>
     </div>
 </div>
