refactor htpp service

--- a/src/app/home/views/update-person/update-person.component.html
+++ b/src/app/home/views/update-person/update-person.component.html
@@ -2,7 +2,7 @@
     <app-modal-pet (closeModalEmitter)="toggleModal($event)" class="position-absolute zindex9"></app-modal-pet>
   </ng-container>
 
-<div class="container row pt-4">
+<div class="container contentstyle row pt-4">
     <app-sidebar class="col-4"></app-sidebar>
     <div class="col-8">
         <app-form-person mode="update" (showModalEmitter)="toggleModal($event)"></app-form-person>
