--- a/src/app/home/components/form-person/form-person.component.html
+++ b/src/app/home/components/form-person/form-person.component.html
@@ -31,7 +31,7 @@
                 </div>
             </div>
             <div class="d-flex justify-content-end">
-                <button type="button" class="btn bg-success text-white" (click)="viewModal()">Crear Mascota</button>
+                <button type="button" class="btn btn-success" (click)="viewModal()">Crear Mascota</button>
             </div>
         </div>
         <div class="tableheight mt-4">
@@ -60,6 +60,6 @@
           <div *ngIf="isErrorFromNumberDOcument" class="text-center">
             <strong class="text-danger">Error Numero de Documento Ya esta registrado</strong>
           </div>
-          <button type="submit" class="btn btn-success w-100 mt-3" [disabled]="!formPerson.valid || petsAgregate.length < 0">{{ mode === 'create' ? 'Crear' : 'Actualizar'  }}</button>
+          <button type="submit" class="btn btn-success w-100 mt-3" [disabled]="!formPerson.valid">{{ mode === 'create' ? 'Crear' : 'Actualizar'  }}</button>
     </div>
 </form>
