--- a/src/app/home/components/modal-pet/modal-pet.component.html
+++ b/src/app/home/components/modal-pet/modal-pet.component.html
@@ -13,7 +13,7 @@
             <option value="pez">pez</option>
             <option value="raton">raton</option>
         </select>
-        <button type="submit" class="btn bg-success w-100 mt-3 text-white">Guardar</button>
-        <button class="btn bg-danger w-100 text-white mt-3" (click)="closeModal()">Cancelar</button>
+        <button type="submit" class="btn btn-success w-100 mt-3">Guardar</button>
+        <button class="btn btn-danger w-100 mt-3" (click)="closeModal()">Cancelar</button>
     </form>
 </div>
