--- a/src/app/home/components/modal-pet/modal-pet.component.html
+++ b/src/app/home/components/modal-pet/modal-pet.component.html
@@ -4,14 +4,15 @@
         <label for="exampleInputEmail1" class="form-label">Nombre</label>
         <input type="text" class="form-control w-100" id="exampleInputEmail1" aria-describedby="emailHelp" formControlName="name"> 
         <label for="exampleInputEmail1" class="form-label">Tipo</label>
-        <select class="form-control" formControlName="type">
-            <option value="null">Seleccionar...</option>
-            <option value="perro">Perro</option>
-            <option value="gato">gato</option>
-            <option value="loro">loro</option>
-            <option value="mono">mono</option>
-            <option value="pez">pez</option>
-            <option value="raton">raton</option>
+        <select class="form-select" aria-label="Default select example" formControlName="type">
+            <option value="">Seleccionar...</option>
+            <option value="perro">Canino</option>
+            <option value="gato">Felino</option>
+            <option value="loro">Ave</option>
+            <option value="mono">Mono</option>
+            <option value="pez">Pez</option>
+            <option value="raton">Roedor</option>
+            <option value="otro">Otro...</option>
         </select>
         <button type="submit" class="btn btn-success w-100 mt-3">Guardar</button>
         <button class="btn btn-danger w-100 mt-3" (click)="closeModal()">Cancelar</button>
