--- a/src/app/home/components/table-items/table-items.component.html
+++ b/src/app/home/components/table-items/table-items.component.html
@@ -1,29 +1,34 @@
-<table class="table text-center">
-    <thead>
-      <tr>
-        <th scope="col">Numero de documento</th>
-        <th scope="col">Nombre</th>
-        <th scope="col">Mascotas</th>
-        <th scope="col">Acciones</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let person of persons">
-        <th scope="row">{{ person.numberDocument }}</th>
-        <td>{{ person.name | titlecase }}</td>
-        <td>
-          <span *ngFor="let pet of person.pets">
-            <div>{{ pet.name | titlecase }} - {{ pet.type | titlecase }}</div>
-          </span>
-        </td>
-        <td>
-          <div class="mb-1">
-            <button type="button" class="btn btn-danger btn-sm w-75" (click)="deletePerson(person._id)">Eliminar</button>
-          </div>
-          <div class="mt-1">
-            <button type="button" class="btn btn-warning btn-sm w-75" (click)="editPerson(person._id)">Editar</button>
-          </div>
-        </td>
-      </tr>
-    </tbody>
-  </table>
+<input #term type="text" placeholder="Buscar Persona..." (keyup)="findPersonByTerm()" class="form-control">
+<table *ngIf="persons.length;else empty" class="table text-centerdiv">
+  <thead>
+    <tr>
+      <th scope="col">Numero de documento</th>
+      <th scope="col">Nombre</th>
+      <th scope="col">Mascotas</th>
+      <th scope="col">Acciones</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let person of persons">
+      <th scope="row">{{ person.numberDocument }}</th>
+      <td>{{ person.name | titlecase }}</td>
+      <td>
+        <span *ngFor="let pet of person.pets">
+          <div>{{ pet.name | titlecase }} - {{ pet.type | titlecase }}</div>
+        </span>
+      </td>
+      <td>
+        <div class="mb-1">
+          <button type="button" class="btn btn-danger btn-sm w-75" (click)="deletePerson(person._id)">Eliminar</button>
+        </div>
+        <div class="mt-1">
+          <button type="button" class="btn btn-warning btn-sm w-75" (click)="editPerson(person._id)">Editar</button>
+        </div>
+      </td>
+    </tr>
+  </tbody>
+</table>
+<ng-template #empty>
+  <hr>
+  <p class="mt-3 fs-5 text-center">No hay datos para mostrar</p>
+</ng-template>
