--- a/src/app/home/components/modal-pet/modal-pet.component.html
+++ b/src/app/home/components/modal-pet/modal-pet.component.html
@@ -14,7 +14,7 @@
             <option value="raton">Roedor</option>
             <option value="otro">Otro...</option>
         </select>
-        <button type="submit" class="btn btn-success w-100 mt-3">Guardar</button>
+        <button type="submit" class="btn btn-success w-100 mt-3" [disabled]="formNewPet.invalid">Guardar</button>
         <button class="btn btn-danger w-100 mt-3" (click)="closeModal()">Cancelar</button>
     </form>
 </div>
