changes in styles cdn

--- a/src/app/home/components/modal-pet/modal-pet.component.html
+++ b/src/app/home/components/modal-pet/modal-pet.component.html
@@ -6,12 +6,12 @@
         <label for="exampleInputEmail1" class="form-label">Tipo</label>
         <select class="form-select" aria-label="Default select example" formControlName="type">
             <option value="">Seleccionar...</option>
-            <option value="perro">Canino</option>
-            <option value="gato">Felino</option>
-            <option value="loro">Ave</option>
-            <option value="mono">Mono</option>
+            <option value="canino">Canino</option>
+            <option value="felino">Felino</option>
+            <option value="ave">Ave</option>
+            <option value="simio">Simio</option>
             <option value="pez">Pez</option>
-            <option value="raton">Roedor</option>
+            <option value="roedor">Roedor</option>
             <option value="otro">Otro...</option>
         </select>
         <button type="submit" class="btn btn-success w-100 mt-3" [disabled]="formNewPet.invalid">Guardar</button>
